# Project1c

./: Automaton.h  CMakeLists.txt  CommentAutomaton.cpp  CommentAutomaton.h  EOFAutomaton.cpp  EOFAutomaton.h  FactsAutomaton.cpp  FactsAutomaton.h  File1.txt  IDAutomaton.cpp  IDAutomaton.h  Lexer.cpp  Lexer.h  Matcher.cpp  Matcher.h  QueriesAutomaton.h  RulesAutomaton.cpp  RulesAutomaton.h  SchemesAutomaton.h  StringAutomaton.cpp  StringAutomaton.h  Token.cpp  Token.h  UndefinedAutomaton.cpp  UndefinedAutomaton.h  main.cpp
